--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_PASS=0fa0f229b6bdd0
 SMTP_USER=0bdf8f439d1fe0
+
+MYSQL_USER=root
+MYSQL_DB_NAME=gatunos
+MYSQL_HOST=localhost
+MYSQL_PASSWORD=
